# gquick

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  selector.html  vite.config.ts
.github/workflows/: build.yml
arch/: README.md  backend-tauri.md  context.md  plugin-system.md  plugin-tools.md  plugins.md  recent-files-plugin.md
arch/api/: contracts.md  sequences.md
arch/components/: component-name.md  docker.md  relationships.md
arch/data/: flows.md  models.md
arch/diagrams/: architecture.md  architecture.mmd  flow.md  flow.mmd  sequence.md  sequence.mmd
docs/: project-overview.md
docs/auth-ocr-improvements/: commit-message.md  release-notes.md
docs/capture-fixes/: commit-message.md  release-notes.md
docs/commit/: commit-message.md
docs/cross-platform-audit/: findings.md  summary.md
docs/dependency-audit/: report.md
docs/design/: file-index-search-ux-spec.md  image-attachment.md
docs/docker-management/: commit-message.md  release-notes.md
docs/expanded-window-generic/: commit-message.md  release-notes.md
docs/first-github-release/: release-notes.md
docs/latest-updates/: commit-message.md  release-notes.md
docs/macos-code-signing/: setup.md
docs/notes-plugin/: commit-message.md  release-notes.md
docs/openai-web-search/: commit-message.md  release-notes.md
docs/overall-functionalities-and-plugins/: index.md  (+7 more)
memories/: project_context.md
scripts/: macos-bundle-ocr.mjs  run-tauri.mjs
src/: App.tsx  Selector.tsx  Settings.tsx  index.css  main.tsx  selector-entry.tsx
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
website/: index.html
(+93 files in other folders)
