[package]
name = "gquick"
version = "0.1.7"
description = "A simple, fast and feature rich launcher"
authors = ["Ricky Dane Perlick"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gquick_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
xcap = "0.9"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jwalk = "0.8"
chrono = "0.4"
dirs = "5"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
rayon = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
scraper = "0.22"
libc = "0.2"
unicode-normalization = "0.1"
walkdir = "2"

[target.'cfg(target_os = "macos")'.dependencies]
tesseract = "0.15"
core-graphics = "0.25"
objc2 = "0.6"
objc2-foundation = "0.3"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
